fix go api
